fixed right side alignment on mobile

--- a/src/static/styles/workshopmobile.css
+++ b/src/static/styles/workshopmobile.css
@@ -1,5 +1,5 @@
 .card{
-  display: flex; min-width: 300px; min-height: 250px; width: calc(100% - 100px); height: auto; border: 0px solid #ECECEC;
+  display: flex; min-width: 300px; min-height: 250px; width: calc(100% - 70px - 10vw); height: auto; border: 0px solid #ECECEC;
   box-sizing: border-box;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
   border-radius: 5px;
@@ -67,7 +67,7 @@ display: flex; flex-direction: row; height: auto; width: auto; padding: 0px; jus
   top: auto;
   left: auto;
   height: auto;
-  width: calc(100% - 80px);
+  width: calc(100vw - 70px - 10vw);
   padding-bottom: 10px;
 }
 
@@ -75,7 +75,7 @@ display: flex; flex-direction: row; height: auto; width: auto; padding: 0px; jus
   position: relative;
   top: auto;
   left: auto;
-  width: calc(100% - 80px);
+  width: calc(100vw - 70px - 10vw);
   padding-bottom: 40px;
 }
 
